feat(create_instance): Inject Annotation 이름을 Bean 변경 및 warning 없애기